# python_broken-calc-v2

./: pyproject.toml  requirements.txt
root/: app.py  settings.py
root/src/: api.py  views.py
root/templates/: index.html  style.css
